# botGasolineras

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.external-mysql.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260325_0001_initial_schema.py  20260327_0002_postal_code_resolution.py  20260327_0003_postal_code_locations.py
app/: __init__.py  run_bot.py  run_postal_code_backfill.py  run_worker.py
app/bot/: bootstrap.py  keyboards.py  middleware.py  router.py  states.py
app/config/: constants.py  database.py  logging.py  settings.py
app/integrations/: fuel_api.py  http_client.py  postal_code_api.py
app/models/: __init__.py  base.py  enums.py  fuel.py  notification.py  postal_code_location.py  station.py  station_price.py  sync_run.py  user.py  watchlist.py
app/repositories/: base.py  fuels.py  notifications.py  postal_code_locations.py  station_prices.py  stations.py  sync_runs.py  users.py  watchlists.py
app/scheduler/: runner.py
app/services/: notification_service.py  postal_code_backfill_service.py  search_service.py  sync_service.py  watchlist_service.py
app/utils/: formatting.py  parsing.py  timezone.py
tests/: conftest.py  test_drop_detection.py  test_parsing.py  test_postal_code_backfill.py  test_postal_code_resolution.py  test_search.py  test_search_radius.py  test_watchlists.py  test_worker_resilience.py
