[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-gasolineras"
version = "1.0.0"
description = "Bot publico de Telegram para monitorizar bajadas de precio del combustible en gasolineras de Espana."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Codex" }]
dependencies = [
  "aiogram>=3.18.0,<4.0.0",
  "alembic>=1.14.1,<2.0.0",
  "APScheduler>=3.10.4,<4.0.0",
  "asyncmy>=0.2.10,<1.0.0",
  "cryptography>=44.0.2,<46.0.0",
  "greenlet>=3.1.1,<4.0.0",
  "httpx>=0.28.1,<1.0.0",
  "pydantic-settings>=2.8.1,<3.0.0",
  "PyMySQL>=1.1.1,<2.0.0",
  "SQLAlchemy>=2.0.38,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0,<1.0.0",
  "pytest>=8.3.5,<9.0.0",
  "pytest-asyncio>=0.25.3,<1.0.0",
]

[tool.setuptools]
packages = [
  "app",
  "app.bot",
  "app.config",
  "app.integrations",
  "app.models",
  "app.repositories",
  "app.scheduler",
  "app.services",
  "app.utils",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
